--- a/Credit_Risk/credit_risk_classification.ipynb
+++ b/Credit_Risk/credit_risk_classification.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "id": "aEN8NbfTW2Lo"
       },
@@ -44,14 +44,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
         },
         "id": "Xn8bH9TFW2Lu",
-        "outputId": "8c1eccf0-e4f5-4395-d37b-2a272593d889"
+        "outputId": "a216e58c-d538-4510-e37a-ba8b6d7ec57b"
       },
       "outputs": [
         {
@@ -74,7 +74,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-2e18a298-4f2b-4691-ae36-74bb3e1b6be1\">\n",
+              "  <div id=\"df-57ab432f-3933-47d3-b9aa-61f90eb21885\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -163,7 +163,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-2e18a298-4f2b-4691-ae36-74bb3e1b6be1')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-57ab432f-3933-47d3-b9aa-61f90eb21885')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -214,12 +214,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-2e18a298-4f2b-4691-ae36-74bb3e1b6be1 button.colab-df-convert');\n",
+              "          document.querySelector('#df-57ab432f-3933-47d3-b9aa-61f90eb21885 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-2e18a298-4f2b-4691-ae36-74bb3e1b6be1');\n",
+              "          const element = document.querySelector('#df-57ab432f-3933-47d3-b9aa-61f90eb21885');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -242,7 +242,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 2
         }
       ],
       "source": [
@@ -264,7 +264,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 3,
       "metadata": {
         "id": "Y5DDJEpdW2Lv"
       },
@@ -281,13 +281,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "lVP02ldMW2Lv",
-        "outputId": "fceea5a5-2d3e-4665-fe9c-f7b6231c7e80"
+        "outputId": "d2acb52b-6108-44bf-90ef-4737a73cad78"
       },
       "outputs": [
         {
@@ -303,7 +303,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 4
         }
       ],
       "source": [
@@ -313,14 +313,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
         },
         "id": "T5fd7I4bW2Lw",
-        "outputId": "65e87a91-87c4-414c-f5a0-3e8cb22d238f"
+        "outputId": "5161c0cd-264b-40dd-c071-bcfacaabd742"
       },
       "outputs": [
         {
@@ -343,7 +343,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-e4ff0be1-8bcd-495b-9b55-0bc12b3b963a\">\n",
+              "  <div id=\"df-d3a3d1c7-992d-4cad-bfc8-0d418d21cb48\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -426,7 +426,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e4ff0be1-8bcd-495b-9b55-0bc12b3b963a')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d3a3d1c7-992d-4cad-bfc8-0d418d21cb48')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -477,12 +477,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-e4ff0be1-8bcd-495b-9b55-0bc12b3b963a button.colab-df-convert');\n",
+              "          document.querySelector('#df-d3a3d1c7-992d-4cad-bfc8-0d418d21cb48 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-e4ff0be1-8bcd-495b-9b55-0bc12b3b963a');\n",
+              "          const element = document.querySelector('#df-d3a3d1c7-992d-4cad-bfc8-0d418d21cb48');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -505,7 +505,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 5
         }
       ],
       "source": [
@@ -524,13 +524,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ah7FxFXXW2Lx",
-        "outputId": "085bf754-3f2e-4a8b-9542-3a2617a63e16"
+        "outputId": "d0f1410a-388e-4ca9-f3d9-7d79db1dd89f"
       },
       "outputs": [
         {
@@ -543,7 +543,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 6
         }
       ],
       "source": [
@@ -562,7 +562,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 7,
       "metadata": {
         "id": "vh8C1jtOW2Lx"
       },
@@ -605,14 +605,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 75
         },
         "id": "hfgNKeJIW2Ly",
-        "outputId": "ca84944d-6b93-4c70-c71d-6923470bc4b9"
+        "outputId": "e19bca13-6d69-4702-aa75-b23b8bbf4428"
       },
       "outputs": [
         {
@@ -626,7 +626,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 8
         }
       ],
       "source": [
@@ -652,7 +652,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 9,
       "metadata": {
         "id": "LLvVWgGQW2Ly"
       },
@@ -679,13 +679,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "4f-WrATfW2Lz",
-        "outputId": "9307aea7-bc6b-42ad-b70a-3fda2d74b2f0"
+        "outputId": "9060dc2f-43dd-4829-ace6-57bae122165d"
       },
       "outputs": [
         {
@@ -703,13 +703,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "4DoQgtvkW2Lz",
-        "outputId": "40e09580-7c16-41fe-f68d-3d72f0c38f64"
+        "outputId": "f54f65e2-824a-4e93-e36b-2238205d81e1"
       },
       "outputs": [
         {
@@ -728,13 +728,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Lph65YNXW2Lz",
-        "outputId": "b8e454f1-0cff-4dbd-f5d1-1303982d3d9d"
+        "outputId": "e7c3e91f-5e72-4f40-a7d8-e114caf13e50"
       },
       "outputs": [
         {
@@ -807,7 +807,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 13,
       "metadata": {
         "id": "XyOGRTGWW2L0"
       },
@@ -826,40 +826,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 19,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "_HyldcuTW2L1",
-        "outputId": "0b218f29-c3f7-4708-cdbd-7f4f56660f58"
+        "outputId": "768979a4-de3a-442c-e05e-e96d0232d499"
       },
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0        0\n",
-              "1        0\n",
-              "2        0\n",
-              "3        0\n",
-              "4        0\n",
-              "        ..\n",
-              "37525    1\n",
-              "37526    1\n",
-              "37527    1\n",
-              "37528    1\n",
-              "37529    1\n",
-              "Name: loan_status, Length: 37530, dtype: int64"
+              "0    18765\n",
+              "1    18765\n",
+              "Name: loan_status, dtype: int64"
             ]
           },
           "metadata": {},
-          "execution_count": 22
+          "execution_count": 19
         }
       ],
       "source": [
         "# Count the distinct values of the resampled labels data\n",
-        "y_resampled"
+        "y_resampled.value_counts()"
       ]
     },
     {
@@ -873,7 +864,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 15,
       "metadata": {
         "id": "v2QsV8L9W2L2"
       },
@@ -907,13 +898,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 16,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "vKvEZOYgW2L2",
-        "outputId": "94fe20a7-6a36-4f02-f205-5dad66436bba"
+        "outputId": "ac231062-46e2-4bca-9460-b945f8d23317"
       },
       "outputs": [
         {
@@ -931,13 +922,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 17,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "LjxDw8rKW2L3",
-        "outputId": "15642dfa-e2a0-4a0b-c353-ebf3f63be35b"
+        "outputId": "8c680432-4f77-4fa2-eed6-db6d100b7e06"
       },
       "outputs": [
         {
@@ -956,13 +947,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 18,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "5X7I9f_2W2L3",
-        "outputId": "9cde9f0b-4a60-4d0a-bbe7-78f864d39b2b"
+        "outputId": "b6660820-0159-4049-8334-59a15351bb30"
       },
       "outputs": [
         {
@@ -1016,7 +1007,7 @@
       "metadata": {
         "id": "wgRsBJf3f5wJ"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
     }
   ],
